--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: mysql-server # you probably want to 'snapcraft register <name>'
+name: charmed-mysql # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
 version: '8.0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: MySQL server in a snap. # 79 char long summary
