--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -78,6 +78,8 @@ apps:
     command: usr/bin/mysqlshow
   mysqlsh:
     command: usr/bin/mysqlsh
+    plugs:
+      - network
   mysqlrouter:
     command: start-mysql-router.sh 
   mysqlrouter-service:
