Grant mysql the network plug

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -39,6 +39,8 @@ hooks:
 apps:
   mysql:
     command: usr/bin/mysql
+    plugs:
+      - network
   mysql-config-editor:
     command: usr/bin/mysql_config_editor
   mysqldump:
