--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,6 +6,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: 'Foresight: Collect workflow telemetry'
+        uses: runforesight/foresight-workflow-kit-action@v1
       - uses: actions/checkout@v3
       - uses: snapcore/action-build@v1
         id: build
