--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -1,11 +1,11 @@
+name: Check Version
 on:
   workflow_dispatch:
   pull_request:
 
 jobs:
   check-version:
-    name: Check Version
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 15
     steps:
       - name: 'Foresight: Collect workflow telemetry'
