--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
     yamllint
     black
 commands = 
-    yamllint --no-warnings .
+    yamllint --no-warnings ./snap/
     black --check --diff .
 
 [testenv:smoke]
