Run mysqlrouter and mysqlsh as non-root user

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -83,7 +83,7 @@ apps:
       - network
       - network-bind
   mysqlsh:
-    command: usr/bin/mysqlsh
+    command: run-mysqlsh.sh
     plugs:
       - network
   mysqlrouter:
