--- a/.github/workflows/smoke.yaml
+++ b/.github/workflows/smoke.yaml
@@ -11,7 +11,9 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/build.yaml
+    name: Build snap
+    uses: canonical/data-platform-workflows/.github/workflows/build_snap_without_cache.yaml@v2
+
   smoke:
     runs-on: ubuntu-latest
     needs: build
@@ -23,6 +25,6 @@ jobs:
         run: python3 -m pip install tox
       - uses: actions/download-artifact@v3
         with:
-          name: snap-artifact
+          name: ${{ needs.build.outputs.artifact-name }}
       - name: Smoke Tests
         run: tox run -e smoke
