--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: charmed-mysql # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '8.0.32-0' # just for humans, typically '1.2+git' or '1.3.2'
+version: '8.0.33-0' # just for humans, typically '1.2+git' or '1.3.2'
 summary: MySQL server in a snap. # 79 char long summary
 description: |
   The MySQL software delivers a very fast, multithreaded, multi-user,
@@ -20,8 +20,10 @@ package-repositories:
       - main
     suites:
       - jammy
-    key-id: 630239CC130E1A7FD81A27B140976EAF437D05B5
+    key-id: F6ECB3762474EDA9D21B7022871920D1991BC93C
     url: http://security.ubuntu.com/ubuntu/
+  - type: apt
+    ppa: data-platform/mysql-shell
   - type: apt
     components:
       - main
@@ -66,7 +68,7 @@ slots:
     interface: content
     content: socket-directory
     write:
-      - $SNAP_COMMON/var/run/mysqlrouter
+      - $SNAP_COMMON/run/mysqlrouter
 
 apps:
   mysql:
@@ -116,19 +118,12 @@ parts:
       printf "Package: mysql-server-8.0\nPin: version 8.0.32*\nPin-Priority: 1001\n" > /etc/apt/preferences.d/mysql
       printf "\nPackage: mysql-router\nPin: version 8.0.32*\nPin-Priority: 1001\n" >> /etc/apt/preferences.d/mysql
       printf "\nPackage: percona-xtrabackup-80\nPin: version 8.0.32*\nPin-Priority: 1001\n" >> /etc/apt/preferences.d/mysql
-  package-mysql-shell:
-    plugin: dump
-    source: https://downloads.mysql.com/archives/get/p/43/file/mysql-shell-8.0.32-linux-glibc2.12-x86-64bit.tar.gz
-    organize:
-      bin: usr/bin
-      libexec: usr/libexec
-      lib: usr/lib
-      share: usr/share
   packages-deb:
     plugin: nil
     stage-packages:
       - mysql-server-8.0
       - mysql-router
+      - mysql-shell
       - percona-xtrabackup-80
       - util-linux
     after:
