--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -45,6 +45,8 @@ layout:
     bind: $SNAP_DATA/var/lib/mysqlrouter
   /var/log/mysqlrouter:
     bind: $SNAP_COMMON/var/log/mysqlrouter
+  /var/log/mysqlsh:
+    bind: $SNAP_COMMON/var/log/mysqlsh
   /usr/lib/mysqlsh:
     bind: $SNAP/lib/mysqlsh
 
@@ -83,7 +85,7 @@ apps:
       - network
       - network-bind
   mysqlsh:
-    command: usr/bin/mysqlsh
+    command: run-mysqlsh.sh
     plugs:
       - network
   mysqlrouter:
