--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: charmed-mysql # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '8.0.33-0' # just for humans, typically '1.2+git' or '1.3.2'
+version: '8.0.33' # just for humans, typically '1.2+git' or '1.3.2'
 summary: MySQL server in a snap. # 79 char long summary
 description: |
   The MySQL software delivers a very fast, multithreaded, multi-user,
@@ -10,6 +10,7 @@ description: |
 
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
+license: Apache-2.0
 
 system-usernames:
   snap_daemon: shared
@@ -48,7 +49,6 @@ layout:
     bind: $SNAP_COMMON/var/log/mysqlsh
   /usr/lib/mysqlsh:
     bind: $SNAP/lib/mysqlsh
-
 
 hooks:
   install:
@@ -124,6 +124,22 @@ parts:
       - prometheus-mysqlrouter-exporter=4.0.5-0ubuntu0.22.04.1~ppa1
       - xtrabackup=8.0.33-27-0ubuntu0.22.04.1~ppa1
       - util-linux
-  wrapper:
+    organize:
+      usr/share/doc/mysql-server-8.0/copyright: licenses/COPYRIGHT-mysql-server-8.0
+      usr/share/doc/mysql-router/LICENSE.router.gz: licenses/LICENSE-mysql-router
+      usr/share/doc/mysqlsh/LICENSE.gz: licenses/LICENSE-mysql-shell
+      usr/share/doc/prometheus-mysqld-exporter/copyright: licenses/COPYRIGHT-prometheus-mysqld-exporter
+      usr/share/doc/prometheus-mysqlrouter-exporter/copyright: licenses/COPYRIGHT-prometheus-mysqlrouter-exporter
+      usr/share/doc/xtrabackup/LICENSE.gz: licenses/LICENSE-xtrabackup
+      usr/share/doc/util-linux/copyright: COPYRIGHT-util-linux
+  snap-license:
+    plugin: dump
+    source: .
+    source-type: local
+    stage:
+      - licenses/LICENSE-snap
+    organize:
+      LICENSE: licenses/LICENSE-snap
+  snap-scripts:
     plugin: dump
     source: snap/local
