--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -8,15 +8,13 @@ jobs:
     runs-on: ubuntu-22.04
     timeout-minutes: 15
     steps:
-      - name: 'Foresight: Collect workflow telemetry'
-        uses: runforesight/foresight-workflow-kit-action@v1
       - uses: actions/checkout@v3
       - name: Install yq
         run: sudo snap install yq
       - name: Compare versions
         run: |
           SNAP_VERSION=$(yq .version snap/snapcraft.yaml)
-          APT_VERSION=$(apt info mysql-server | grep Version | cut -c10-)
+          APT_VERSION=$(apt info mysql-server-8.0 | grep Version | cut -c10-)
           APT_VERSION=${APT_VERSION::-17}
           if [ "$SNAP_VERSION" != "$APT_VERSION" ]; then
               echo "VERSION MISMATCH DETECTED"
