--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Compare versions
         run: |
           SNAP_VERSION=$(yq .version snap/snapcraft.yaml)
-          APT_VERSION=$(apt info mysql-server-8.0 | grep Version | cut -c10-)
+          APT_VERSION=$(apt-cache show mysql-server-8.0 | grep Version | head -n 1 | cut -c10-)
           APT_VERSION=${APT_VERSION::-17}
           if [ "$SNAP_VERSION" != "$APT_VERSION" ]; then
               echo "VERSION MISMATCH DETECTED"
