snap fixes and ensure snap_daemon perms

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -58,6 +58,10 @@ hooks:
   configure:
     plugs:
       - network
+  post-refresh:
+    plugs:
+      - network
+      - network-bind
 
 slots:
   logs:
