--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: charmed-mysql # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '8.0.34' # just for humans, typically '1.2+git' or '1.3.2'
+version: '8.0.35' # just for humans, typically '1.2+git' or '1.3.2'
 summary: MySQL server in a snap. # 79 char long summary
 description: |
   The MySQL software delivers a very fast, multithreaded, multi-user,
@@ -113,13 +113,20 @@ apps:
     plugs:
       - network
       - network-bind
+  mysqlrouter-exporter:
+    command: start-mysqlrouter-exporter.sh
+    daemon: simple
+    install-mode: disable
+    plugs:
+      - network
+      - network-bind
 
 parts:
   packages-deb:
     plugin: nil
     stage-packages:
-      - mysql-server-8.0=8.0.34-0ubuntu0.22.04.1
-      - mysql-router=8.0.34-0ubuntu0.22.04.1
+      - mysql-server-8.0=8.0.35-0ubuntu0.22.04.1
+      - mysql-router=8.0.35-0ubuntu0.22.04.1
       - mysql-shell=8.0.34-0ubuntu0.22.04.1~ppa1
       - prometheus-mysqld-exporter=0.14.0-0ubuntu0.22.04.1~ppa1
       - prometheus-mysqlrouter-exporter=4.0.5-0ubuntu0.22.04.1~ppa1
