--- a/.github/workflows/check_version.yaml
+++ b/.github/workflows/check_version.yaml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install yq
         run: sudo snap install yq
+      - name: Clean apt cache
+        run: sudo apt-get clean
       - name: Compare versions
         run: |
           SNAP_VERSION=$(yq .version snap/snapcraft.yaml)
