Add mysqlrouter_password snap command

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -125,6 +125,8 @@ apps:
     plugs:
       - network
       - network-bind
+  mysqlrouter-passwd:
+    command: usr/bin/mysqlrouter_passwd
 
 parts:
   packages-deb:
