Run mysqlrouter-passwd as a script that de-escalates privileges to snap_daemon

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -122,7 +122,7 @@ apps:
       - network
       - network-bind
   mysqlrouter-passwd:
-    command: usr/bin/mysqlrouter_passwd
+    command: run-mysqlrouter-password.sh
 
 parts:
   packages-deb:
