--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: charmed-mysql # you probably want to 'snapcraft register <name>'
 base: core22 # the base snap is the execution environment for this snap
-version: '8.0.34' # just for humans, typically '1.2+git' or '1.3.2'
+version: '8.0.35' # just for humans, typically '1.2+git' or '1.3.2'
 summary: MySQL server in a snap. # 79 char long summary
 description: |
   The MySQL software delivers a very fast, multithreaded, multi-user,
@@ -65,6 +65,7 @@ slots:
     source:
       read:
         - $SNAP_COMMON/var/log/mysql
+        - $SNAP_COMMON/var/log/mysqlrouter
   mysqlrouter-sockets:
     interface: content
     content: socket-directory
@@ -113,14 +114,23 @@ apps:
     plugs:
       - network
       - network-bind
+  mysqlrouter-exporter:
+    command: start-mysql-router-exporter.sh
+    daemon: simple
+    install-mode: disable
+    plugs:
+      - network
+      - network-bind
+  mysqlrouter-passwd:
+    command: run-mysql-router-password.sh
 
 parts:
   packages-deb:
     plugin: nil
     stage-packages:
-      - mysql-server-8.0=8.0.34-0ubuntu0.22.04.1
-      - mysql-router=8.0.34-0ubuntu0.22.04.1
-      - mysql-shell=8.0.34-0ubuntu0.22.04.1~ppa1
+      - mysql-server-8.0=8.0.35-0ubuntu0.22.04.1
+      - mysql-router=8.0.35-0ubuntu0.22.04.1
+      - mysql-shell=8.0.35-0ubuntu0.22.04.1~ppa1
       - prometheus-mysqld-exporter=0.14.0-0ubuntu0.22.04.1~ppa1
       - prometheus-mysqlrouter-exporter=4.0.5-0ubuntu0.22.04.1~ppa1
       - xtrabackup=8.0.34-29-0ubuntu0.22.04.1~ppa1
